--- a/views/ratrace/otherPlayers.html
+++ b/views/ratrace/otherPlayers.html
@@ -17,12 +17,12 @@
     </header>
     <div class="players-wrapper">
       <div class="row">
-        <div class="icon brown" id="player-icon"></div>
+        <div class="icon pink" id="player-icon"></div>
         <div class="name" id="player-name">Sasuke</div>
         <div class="profession" id="player-profession">Mechanic</div>
       </div>
       <div class="row">
-        <div class="icon lightblue" id="player-icon"></div>
+        <div class="icon blue" id="player-icon"></div>
         <div class="name" id="player-name">Naruto</div>
         <div class="profession" id="player-profession">Teacher</div>
       </div>
@@ -32,7 +32,7 @@
         <div class="profession" id="player-profession">Police</div>
       </div>
       <div class="row">
-        <div class="icon red" id="player-icon"></div>
+        <div class="icon violet" id="player-icon"></div>
         <div class="name" id="player-name">Eren Yeager</div>
         <div class="profession" id="player-profession">Janitor</div>
       </div>
