--- a/views/ratrace/ratrace.html
+++ b/views/ratrace/ratrace.html
@@ -4,6 +4,8 @@
   <title>Cashflow</title>
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/board-style.css">
+  <script src="commonLib.js"></script>
+  <script src="ratRaceBoard.js"></script>
 </head>
 
 <body>
