--- a/public/css/common.css
+++ b/public/css/common.css
@@ -162,3 +162,28 @@ a {
   gap: 1vmax;
   text-align: center;
 }
+
+.heading {
+  font-size: 4.5vmax;
+}
+
+.home-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.home-button>a {
+  padding: 0.3vmax;
+  font-size: 1.5vmax;
+  cursor: pointer;
+  border: var(--def-border);
+  border-radius: var(--def-curve);
+}
+
+.not-found-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 2vmax;
+}
