[#10] suresh/gayatri - added login button id
What are the changes?

* added id to login button

Why do we need this change?

* to automate test and clicks

--- a/views/login.html
+++ b/views/login.html
@@ -21,7 +21,7 @@
           <input type="password" name="password" id="password-input" placeholder="Password" required>
         </div>
         <div class="submit-button">
-          <input type="submit" value="Login">
+          <input id="login-button" type="submit" value="Login">
         </div>
         <div id="message">__MESSAGE__</div>
       </form>
