--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -106,11 +106,13 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .ratrace-tile img {
   width: 45%;
   aspect-ratio: auto;
+  position: absolute;
 }
 
 .card-deck img {
@@ -483,13 +485,14 @@ a {
 
 /* Initial player positions */
 
-#initial-positions {
+#rat-tile-0 {
   grid-row: 8;
   grid-column: 2/4;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   align-items: center;
-  padding: 1vmax;
+  margin: 0.5vmax 1vmax;
+  gap: 0.1vmax;
 }
 
 .start {
