--- a/views/ratrace/ratrace.html
+++ b/views/ratrace/ratrace.html
@@ -2,10 +2,10 @@
 
   <head>
     <title>Cashflow</title>
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/board-style.css">
-    <script src="commonLib.js"></script>
-    <script src="ratRaceBoard.js"></script>
+    <link rel="stylesheet" href="../../public/css/common.css">
+    <link rel="stylesheet" href="../../public/css/board-style.css">
+    <script src="../../public/commonLib.js"></script>
+    <script src="../../public/ratRaceBoard.js"></script>
   </head>
 
   <body>
@@ -48,7 +48,21 @@
           </div>
           <div class="interaction-space">
             <div id="interaction-screen"></div>
-            <div id="main-card"></div>
+            <div id="main-card" class="market">
+              <div class="card-title">
+                Stock - ON2U Entertainment Co.
+              </div>
+              <div class="description">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit ipsam, ab hic velit mollitia
+              </div>
+              <div class="rule">
+                Cardholder rolls 1 die. Die=1-3,Double. Die=4-6,Half the stocks.
+              </div>
+              <div class="actions">
+                <div id="action-ok" class="action-btn button">OK</div>
+                <div id="action-ok" class="action-btn button">SKIP</div>
+              </div>
+            </div>
             <div id="message-space"></div>
           </div>
         </div>
