[#20] sai/govinda - Added a default market card to show.
What are the changes?

* Added a default market card to show.

Why do we need this change?

* To show card to the player.

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -414,7 +414,7 @@ a {
   padding: 0.5em;
 }
 
-#main-card .card-title {
+#main-card .card-heading {
   font-size: 1.3vmax;
   font-weight: 500;
   width: 100%;
