[#19] gayatri/suresh - Added blinking player icon
What are the changes?

* Added styles for blinking icon

Why do we need this change?

* To highlight current player

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -458,7 +458,7 @@ a {
 #dice-box .dice {
   width: 65px;
   aspect-ratio: 1;
-  border: var(--def-border);
+  border: 2px solid black;
   position: relative;
   display: flex;
   align-items: center;
