--- a/public/css/common.css
+++ b/public/css/common.css
@@ -18,12 +18,12 @@
   --market-bg: #d2e4f4;
   --others-border: #7746f0;
   --others-bg: #e3dbf8;
-  --blue-p: #99f3ff;
-  --green-p: #94e9a1;
-  --yellow-p: #fbf07f;
-  --pink-p: #ffb3b9;
-  --violet-p: #b39afe;
-  --orange-p: #ffae56;
+  --blue-p: #00b7ff;
+  --green-p: #4eec66;
+  --yellow-p: #f4e547;
+  --pink-p: #ee3645;
+  --violet-p: #7145f7;
+  --orange-p: #fc880c;
   --grey-p: rgb(210 210 210);
 }
 
@@ -147,9 +147,10 @@ a {
 .icon {
   border-radius: 50%;
   aspect-ratio: 1;
-  width: 2.5em;
+  width: 2em;
   border: var(--def-border);
   z-index: 1;
+  transition: 500ms ease;
 }
 
 .name {
