--- a/views/register.html
+++ b/views/register.html
@@ -21,7 +21,7 @@
           <input type="password" name="password" id="password-input" placeholder="Password" required>
         </div>
         <div class="submit-button">
-          <input type="submit" value="Register">
+          <input id="register-button" type="submit" value="Register">
         </div>
         <div id="message">__MESSAGE__</div>
       </form>
