[#20] sai/govinda - Made the card actions available to the current player.
What are the changes?

* Made the card actions available to the current player.

Why do we need this change?

* To make the card interactable to current player only.

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -442,6 +442,13 @@ a {
   justify-content: space-around;
 }
 
+#main-card .actions-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
 #main-card .actions .action-btn {
   width: 20%;
   height: 80%;
