[#16] sai/suresh - Made the change turn happens after card action is clicked.
What are the changes?

* Made the change turn happens after card action is clicked.

Why do we need this change?

* To change turn after card actions.

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -140,7 +140,10 @@ a {
   border: 0.2vmax solid var(--market-border);
 }
 
-.purples {
+.purples,
+.downsized,
+.baby,
+.charity {
   background-color: var(--others-bg);
   border: 0.2vmax solid var(--others-border);
 }
