[#51] vivek/dileep - Changed the styling of lobby page.
What are the changes?

* Removed plus icons from lobby.
* Changed the message for insufficient players.
* Redirecting to main menu after cancelling the game.

Why do we need this change?

* To enhance players lobby experience.

--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -43,6 +43,10 @@
   background-color: azure;
   border-radius: 50%;
   margin-bottom: 0.4em;
+  font-size: 1vmax;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .player-name {
@@ -103,5 +107,5 @@
 }
 
 .message {
-  width: 30vmax;
+  width: 32vmax;
 }
