[#52] vivek/dileep - Moved join popup inside the interaction box.
What are the changes?

* Changed styling of join popup.

Why do we need this change?

* To make the user interaction easy.

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -119,6 +119,7 @@ a {
   padding: 0.8em;
   border: var(--big-border);
   border-radius: var(--def-curve);
+  background-color: white;
 }
 
 .btn:hover {
