[#16] sai/suresh - Changed the card background.
What are the changes?

* Changed the card background.
* Fixed choose deal pop up.

Why do we need this change?

* Improved card design.

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -413,7 +413,7 @@ a {
   grid-column: 2/6;
   margin: 1vmax;
   border-radius: 0.5vmax;
-  border: 0.2vmax solid black;
+  /* border: 0.2vmax solid none; */
   padding: 0.5em;
   display: flex;
   flex-direction: column;
