[#50] vivek/dileep - Showing username in main menu and lobbies
What are the changes?

* Added username to main menu , host lobby and guest lobby pages
* Changed styling for user-info-wrapper

Why do we need this change?

* To display the username

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -40,12 +40,20 @@ body {
   max-height: 100vh;
 }
 
-
-.logout {
-  position: absolute;
-  top: 100px;
+.user-info-wrapper {
+  width: 12vmax;
+  position: fixed;
+  top: 7vmax;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   right: 50px;
   font-size: 1.7vmax;
+}
+
+.username {
+  width: 70%;
+  overflow: hidden;
 }
 
 .logout:hover {
