--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -413,7 +413,6 @@ a {
   grid-column: 2/6;
   margin: 1vmax;
   border-radius: 0.5vmax;
-  /* border: 0.2vmax solid none; */
   padding: 0.5em;
   display: flex;
   flex-direction: column;
@@ -436,6 +435,13 @@ a {
 #main-card .rule {
   width: 100%;
   height: 35%;
+}
+
+#main-card .cost {
+  font-size: 1vmax;
+  font-weight: 600;
+  padding: 1vmax;
+  text-align: center;
 }
 
 #main-card .actions {
