[#57] govinda/gayatri - Added names under ratrace tile icons
What are the changes?

* Added names to indicate the tiles
* Changed button style in login and register pages

Why do we need this change?

* To indicate the tiles in ratrace

--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -37,9 +37,13 @@ input[type=password] {
 }
 
 .submit-button>input {
-  padding: 0.3vmax;
+  padding: 0.4vmax 1vmax;
   font-size: 1.5vmax;
   cursor: pointer;
+  border: var(--big-border);
+  border-radius: 0.7vmax;
+  background-color: white;
+  color: black;
 }
 
 #message {
