[#30] vivek/dileep - Showing message after completion of doodad
What are the changes?

* Added message element for displaying message
* Changed polling time

Why do we need this change?

* To indicate player that doodad is done

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -576,3 +576,9 @@ a {
 .ratrace-tile .icon {
   position: absolute;
 }
+
+.success {
+  color: green;
+  text-align: center;
+  font-size: 2vmax;
+}
