[#30] dileep/ashritha - Added insufficient balance message.
What are the changes?

* Added canContinue method for player.
* Removing game id when player is leaving.
* Added tests for player entity.

Why do we need this change?

* To indicate player that they have insufficient amount.

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -580,5 +580,11 @@ a {
 .success {
   color: green;
   text-align: center;
-  font-size: 2vmax;
+  font-size: 1vmax;
+}
+
+.warning {
+  color: red;
+  text-align: center;
+  font-size: 1vmax;
 }
