--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -93,6 +93,9 @@ a {
 
 #logs .log {
   width: 100%;
+  display: flex;
+  gap: 0.2vmax;
+  align-items: center;
   padding: 0.4vmax 0.8vmax;
   color: gray;
 }
