[#45] sai/vivek - Changed the icons size in log.
What are the changes?

* Changed the icons size in log.

Why do we need this change?

* To show log to players.

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -86,6 +86,11 @@ a {
   display: none;
 }
 
+#logs .log-icon {
+  width: 8%;
+  aspect-ratio: 1;
+}
+
 #logs>div:last-child {
   font-weight: 600;
   color: black;
