[#42] ashritha/dileep - Showing expenses and user details in my profile
What are the changes?

* Changed the z index of the expansion window
* Created table for expenses
* Created structure for user details

Why do we need this change?

* To show expenses in my details

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,5 +1,11 @@
 .profile-wrapper {
-  width: 100%;
+  position: relative;
+  width: 50%;
   height: 100%;
+  left: 50%;
   background-color: silver;
+}
+
+.profile-wrapper table {
+  color: white;
 }
