[#42] dileep/ashritha - Added headings for balance sheet
What are the changes?

* Added headings for assets and liablities in balance sheet.

Why do we need this change?

* To show the headings in my profile

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -11,12 +11,14 @@
   font-size: 1vmax;
 }
 
-.income-statement {
-  height: 50%;
+.income-statement,
+.balance-sheet {
+  height: 40%;
   border: var(--def-border);
 }
 
-.income-container {
+.income-container,
+.balance-container {
   display: flex;
   justify-content: space-around;
 }
