[#42] dileep/ashritha - Added assets in my profile
What are the changes?

* Added headings to all tables in my profile.
* Changed styling in my profile.

Why do we need this change?

* To show assets to player.

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -20,7 +20,7 @@
 .income-container,
 .balance-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .profile-wrapper>header {
