[#42] dileep/ashritha - changed theme of expansion windows.
What are the changes?

* Changed the background color of expansion window.
* Added box shadow and border.
* Displaying capitalized words.
* Added border bottom for table rows.
* Changed the spacing of headings and contents in my profile.

Why do we need this change?

* To enhance user experience.

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -662,7 +662,9 @@ a {
   right: 0;
   width: 50%;
   height: 100%;
-  background-color: silver;
+  background-color: white;
+  border: var(--def-border);
+  box-shadow: 8px 8px 8px 8px black;
   z-index: -1;
   visibility: hidden;
 }
@@ -679,6 +681,7 @@ a {
     visibility: hidden;
     transform: translateX(100%);
   }
+
   to {
     transform: translateX(0);
     visibility: visible;
@@ -697,6 +700,7 @@ a {
     z-index: 1;
     visibility: visible;
   }
+
   to {
     transform: translateX(100%);
     z-index: 1;
