--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -667,6 +667,7 @@ a {
   box-shadow: 8px 8px 8px 8px black;
   z-index: -1;
   visibility: hidden;
+  padding: 1vmax;
 }
 
 .expand-window {
@@ -714,4 +715,39 @@ a {
 
 .inactive {
   z-index: -1;
+}
+
+.ledger-window {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  gap: 1.5vmax;
+  height: 100%;
+}
+
+.window-header {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 600;
+  width: 100%;
+  font-size: var(--plain-font);
+}
+
+.ledger-view {
+  display: flex;
+  flex-flow: column;
+  width: 100%;
+  height: 45vmax;
+  max-height: 75vh;
+}
+
+.ledger-title {
+  font-weight: 600;
+}
+
+.ledger-title, .ledger-entry {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5vmax;
+  border-bottom: var(--def-border);
 }
