[#44] suresh/govinda - mathced styles for multiple windows
What are the changes?

* made close button to have 'Close' text

Why do we need this change?

* To maintain consistency among windows

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -672,9 +672,8 @@ a {
 
 .expand-window {
   animation-name: expand-window;
-  animation-duration: 500ms;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: initial;
+  animation-duration: 100ms;
+  animation-timing-function: linear;
 }
 
 @keyframes expand-window {
@@ -691,8 +690,8 @@ a {
 
 .close-window {
   animation-name: close-window;
-  animation-duration: 500ms;
-  animation-timing-function: ease-in-out;
+  animation-duration: 200ms;
+  animation-timing-function: linear;
 }
 
 @keyframes close-window {
@@ -723,14 +722,15 @@ a {
   align-items: center;
   gap: 1.5vmax;
   height: 100%;
+  padding: 1vmax;
 }
 
 .window-header {
   display: flex;
-  justify-content: space-between;
+  padding: 0vmax 1vmax;
   font-weight: 600;
   width: 100%;
-  font-size: var(--plain-font);
+  justify-content: space-between;
 }
 
 .ledger-view {
@@ -755,4 +755,8 @@ a {
 .ledger-entries {
   height: 100%;
   overflow-y: scroll;
+}
+
+.window-title {
+  font-size: var(--plain-font);
 }
